package cn.edu.neu.elevator.linstener;

public interface FloorSensorListener extends Listener {
    public void onFloorReached();
}
