package cn.edu.neu.elevator.linstener;

/**
 * A label interface to unify the all listeners
 */
public interface Listener {
    void update();
}
